--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 2s linear;
   }
 }
 
@@ -35,4 +35,15 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+p{
+  font-size: 1.5em;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(255, 217, 0);
+  text-shadow: 2px 2px #FF0000;
+}
+
+img{
+  box-shadow: 2px 2px #FF0000;
 }
