--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,30 @@
 .App {
   text-align: center;
+  
 }
-
-.App-logo {
+.App-header{
+  display: flex;
+  
+}
+.App-logo-l,.App-logo-r, .App-log {
   height: 40vmin;
   pointer-events: none;
 }
 
+.left-side, .right-side{
+  padding: 100px;
+  height: 100%;
+  width: 25%;
+}
+.middle-side{
+  width: 50%;
+}
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 2s linear;
+  .App-logo-l {
+    animation: App-logo-spin-l infinite 0.2s linear;
+  }
+  .App-logo-r{
+    animation: App-logo-spin-r infinite 0.2s linear;
   }
 }
 
@@ -17,7 +32,7 @@
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -28,12 +43,20 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes App-logo-spin-l {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
+  }
+}
+@keyframes App-logo-spin-r {
+  from {
+    transform: rotate(360deg);
+  }
+  to {
+    transform: rotate(0deg);
   }
 }
 
