add eye tracker

--- a/src/App.css
+++ b/src/App.css
@@ -12,12 +12,12 @@
 }
 
 .left-side, .right-side{
-  padding: 100px;
   height: 100%;
   width: 25%;
 }
 .middle-side{
-  width: 50%;
+  max-width: 300px;
+  min-width: 300px;
 }
 @media (prefers-reduced-motion: no-preference) {
   .App-logo-l {
@@ -29,6 +29,7 @@
 }
 
 .App-header {
+  width: 100%;
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -69,4 +70,41 @@ p{
 
 img{
   box-shadow: 2px 2px #FF0000;
+}
+.tae{
+  width: 100%;
+  height: 200px;
+  margin: 0 auto;
+}
+#weyel{
+  position: relative;
+  background-color: white;
+  left: 127px;
+  top: -168px;
+}
+#weyer{
+  position: relative;
+  background-color: white;
+  left: 157px;
+  top: -179px;
+
+}
+#weyer, #weyel{
+  width: 18px;
+  height: 10px;
+}
+.App-log{
+  position: relative;
+  top:0px;
+  left: 0px;
+  z-index: 1;
+}
+.eyes{
+  position: absolute;
+  width: 7px;
+  height: 7px;
+  background-color: black;
+  border-radius: 50%;
+  top:0px !important;
+  left: 0px !important;
 }
